--- a/conf/root-openssl.cnf
+++ b/conf/root-openssl.cnf
@@ -61,7 +61,7 @@ emailAddress            = optional
 [ req ]
 # Options for the `req` rool (`man req`)
 prompt                  = no
-default_bits            = 2048
+default_bits            = 1024
 distinguished_name      = req_distinguished_name
 string_mask             = utf8only
 
@@ -86,17 +86,21 @@ emailAddress            = premium-server@thawte.com
 
 [ v3_ca ]
 # Extensions for a typical CA (`man x509v3_config`).
-subjectKeyIdentifier    = hash
-authorityKeyIdentifier  = keyid:always,issuer
 basicConstraints        = critical, CA:true
-keyUsage                = critical, digitalSignature, cRLSign, keyCertSign
+keyUsage                = critical, cRLSign, keyCertSign
 
 [ v3_intermediate_ca ]
 # Extensions for typical intermediate CA (`man x509v3_config`).
-subjectKeyIdentifier    = hash
-authorityKeyIdentifier  = keyid:always,issuer
 basicConstraints        = critical, CA:true, pathlen:0
-keyUsage                = critical, digitalSignature, cRLSign, keyCertSign
+keyUsage                = critical, cRLSign, keyCertSign
+crlDistributionPoints   = URI:http://crl.thawte.com/ThawtePremiumServerCA.crl
+subjectAltName          = dirName:directory_section
+subjectKeyIdentifier    = none
+authorityKeyIdentifier  = none
+extendedKeyUsage        = clientAuth, codeSigning
+
+[ directory_section ]
+CN = PrivateLabel2-144
 
 [ usr_cert ]
 # Extensions for client certificates (`man x509v3_config`).
