all: Start working on Jagex certificate.
Signed-off-by: Open592 Developer <uss@open592.com>

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ ca/intermediate/certs/*
 ca/intermediate/csr/*
 !ca/intermediate/csr/.gitkeep
 
+ca/intermediate/newcerts/*
+!ca/intermediate/newcerts/.gitkeep
+
 ca/intermediate/private/*
 !ca/intermediate/private/.gitkeep
 
