--- a/conf/intermediate-openssl.cnf
+++ b/conf/intermediate-openssl.cnf
@@ -21,9 +21,6 @@ crl                 = $dir/crl/intermediate.crl.pem
 crl_extensions      = crl_ext
 default_crl_days    = 30
 
-# SHA-1 is deprecated, so use SHA-2 instead.
-default_md          = sha256
-
 name_opt            = ca_default
 cert_opt            = ca_default
 default_days        = 375
@@ -38,7 +35,7 @@ policy              = policy_loose
 countryName             = match
 stateOrProvinceName     = match
 organizationName        = match
-organizationUnitName    = optional
+organizationalUnitName  = optional
 commonName              = supplied
 emailAddress            = optional
 
@@ -50,7 +47,7 @@ countryName             = optional
 stateOrProvinceName     = optional
 localityName            = optional
 organizationName        = optional
-organizationUnitName    = optional
+organizationalUnitName  = optional
 commonName              = supplied
 emailAddress            = optional
 
@@ -58,8 +55,7 @@ emailAddress            = optional
 [ req ]
 # Options for the `req` rool (`man req`)
 prompt                  = no
-default_bits            = 2048
-distinguished_name      = req_distinguished_name
+default_bits            = 1024
 string_mask             = utf8only
 
 # SHA-1 is deprecated
@@ -68,57 +64,32 @@ default_md              = sha256
 # Extensions to add when the -x509 option is used.
 x509_extensions         = v3_ca
 
-[ req_distinguished_name ]
-# See <https://en.wikipedia.org/wiki/Certificate_signing_request>.
-#
-# As present in the original Thawte certificate, which was used to sign
-# Jagex's jars.
-commonName              = Thawte Code Signing CA
-0.organizationName      = Thawte Consulting (Pty) Ltd.
-countryName             = ZA
-
 [ v3_ca ]
 # Extensions for a typical CA (`man x509v3_config`).
-subjectKeyIdentifier    = hash
-authorityKeyIdentifier  = keyid:always,issuer
-basicConstraints        = critical, CA:true
+basicConstraints        = critical, CA:TRUE
 keyUsage                = critical, digitalSignature, cRLSign, keyCertSign
 
 [ v3_intermediate_ca ]
 # Extensions for typical intermediate CA (`man x509v3_config`).
-subjectKeyIdentifier    = hash
-authorityKeyIdentifier  = keyid:always,issuer
-basicConstraints        = critical, CA:true, pathlen:0
+basicConstraints        = critical, CA:TRUE, pathlen:0
 keyUsage                = critical, digitalSignature, cRLSign, keyCertSign
 
 [ usr_cert ]
 # Extensions for client certificates (`man x509v3_config`).
-basicConstraints        = CA:FALSE
-nsCertType              = client, email
-nsComment               = "OpenSSL Generated Client Certificate"
-subjectKeyIdentifier    = hash
-authorityKeyIdentifier  = keyid,issuer
-keyUsage                = critical, nonRepudiation, digitalSignature, keyEncipherment
-extendedKeyUsage        = clientAuth, emailProtection
+basicConstraints        = critical, CA:FALSE
+crlDistributionPoints   = URI:http://crl.thawte.com/ThawteCodeSigningCA.crl
+authorityInfoAccess     = OCSP;URI:http://ocsp.thawte.com
+subjectKeyIdentifier    = none
+authorityKeyIdentifier  = none
+extendedKeyUsage        = codeSigning
+1.3.6.1.4.1.311.2.1.22  = ASN1:SEQUENCE:ccs_ext
 
-[ server_cert ]
-# Extensions for server certificates (`man x509v3_config`).
-basicConstraints        = CA:FALSE
-nsCertType              = server
-nsComment               = "OpenSSL Generated Server Certificate"
-subjectKeyIdentifier    = hash
-authorityKeyIdentifier  = keyid,issuer:always
-keyUsage                = critical, digitalSignature, keyEncipherment
-extendedKeyUsage        = serverAuth
+[ ccs_ext ]
+wrappingSeq = SEQUENCE:ccs_oid_seq
+key         = OCTETSTRING:1
 
-[ crl_ext ]
-# Extension for CRLs (`man x509v3_config`)
-authorityKeyIdentifier  = keyid:always
+[ ccs_oid_seq ]
+wrappingSeq = SEQUENCE:ccs_oid
 
-[ ocsp ]
-# Extension for OCSP signing certificates (`man oscp`).
-basicConstraints        = CA:FALSE
-subjectKeyIdentifier    = hash
-authorityKeyIdentifier  = keyid,issuer
-keyUsage                = critical, digitalSignature
-extendedKeyUsage        = critical, OCSPSigning
+[ ccs_oid ]
+oid = OID:1.3.6.1.4.1.311.2.1.22
